--- a/style.css
+++ b/style.css
@@ -4,3 +4,85 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body {
+    background-color: rgba(34, 34, 34, 0.5);
+    background-image: url(images/Default_high_quality_high_detailed_illustration_rainy_cloudy_d_1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.card {
+    width: 90%;
+    max-width: 470px;
+    background: rgba(255, 255, 255, 0.15); 
+    backdrop-filter: blur(10px);
+    color: white;
+    margin: 100px auto 0;
+    border-radius: 2rem;
+    padding: 40px 35px;
+    text-align: center;
+}
+
+.search {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search input {
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 1.5rem;
+}
+
+.search button {
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+    cursor: pointer;
+}
+
+i {
+    width: 60px;
+}
+
+.spline {
+    height: 400px;
+}
+
+.weather h1 {
+    font-size: 5rem;
+    font-weight: 500;
+}
+
+.weather h2 {
+    font-size: 3rem;
+    font-weight: 400;
+    margin-top: 1rem;
+}
+
+.details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+    margin-top: 3rem;
+}
+
+.col {
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
